--- a/download_data.ipynb
+++ b/download_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "238154f8-e050-4792-834d-2d85c0b0b0ad",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "72ffda8e-b2fa-41cb-996b-a8ee4fd008de",
    "metadata": {},
    "outputs": [],
@@ -31,18 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "eece8691-e41f-4785-8449-164e3da7db56",
    "metadata": {},
    "outputs": [],
    "source": [
     "output_dir = '/mnt/data/noah/allen/optotag_data'\n",
-    "output_dir2="
+    "# output_dir2="
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "679267b7-39ad-49c9-a203-27fcf6c4c09b",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "68791a3d-5e2b-4a29-9279-a156f63c2025",
    "metadata": {},
    "outputs": [
@@ -63,12 +63,12 @@
       "text/plain": [
        "wt/wt                                              30\n",
        "Sst-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt      12\n",
-       "Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt       8\n",
        "Pvalb-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt     8\n",
+       "Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt       8\n",
        "Name: full_genotype, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e20f15d1-a3a9-46f9-854c-4bd220822cd3",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
        "797828357  [PPT, MB, APN, NOT, HPF, ProS, CA1, VISam, nan...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,39 +255,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a35da1c6-f5bd-48a8-8083-c80c67f21078",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:downloading a 1601.838MiB file from http://api.brain-map.org//api/v2/well_known_file_download/1026123625\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9160a57ffd94f67aeff48a7162a2d93",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/1.68G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "session = cache.get_session_data(pvalb_sessions.index.values[-3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "7830da74-3bbd-44a9-b773-4fd1c4c7f8da",
    "metadata": {},
    "outputs": [
@@ -297,7 +275,7 @@
        "(300, 6)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +286,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
+   "id": "f552ef34-fb54-42a3-92d2-ebcddc59001c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# help(session)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "4909b2e1-cbd0-4191-8b24-003cecd9a27a",
    "metadata": {},
    "outputs": [
@@ -319,7 +307,7 @@
        "       'half-period of a cosine wave'], dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
