-m added reqs and cleaned code

--- a/make_optotag_dataset.ipynb
+++ b/make_optotag_dataset.ipynb
@@ -6,7 +6,14 @@
    "metadata": {},
    "source": [
     "# Extract and generate a dataset for specifict cell types \n",
-    "Vip, sst, pvalb, wildtype"
+    "Norebook to extract units with their putative cell types from allen institute optotagged recordings [https://allensdk.readthedocs.io/en/latest/_static/examples/nb/ecephys_optotagging.html]\n",
+    "\n",
+    "Cell types are extracted from mice with opsin expressed in these neuron types:\n",
+    "1. Vip\n",
+    "2. Sst\n",
+    "3. Pvalb\n",
+    "\n",
+    "Wildtype (no cells are optically tagged) sessions are available here for verification but not included in the resulting dataset"
    ]
   },
   {
@@ -46,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#where the allen institute data cache will be stored - not the final output of the dataset unless later specified\n",
     "output_dir = '/mnt/data/noah/allen/optotag_data'\n",
     "\n",
     "manifest_path = os.path.join(output_dir, \"manifest.json\")\n",
@@ -281,7 +289,7 @@
    ],
    "source": [
     "# filter for sessions using laser opposed to LED illumination\n",
-    "mask = sessions.index.values >= 789848216\n",
+    "mask = sessions.index.values >= 789848216 #sessions below this number were stimulated using LED illumination and had fewer units\n",
     "sessions_laser = sessions[mask]\n",
     "print(sessions_laser.full_genotype.value_counts())"
    ]
@@ -309,28 +317,17 @@
     "#these are directories to the data and dont contain data themselves\n",
     "pvalb_sessions_directory = sessions_laser[sessions.full_genotype.str.match('Pvalb')]\n",
     "sst_sessions_directory = sessions_laser[sessions.full_genotype.str.match('Sst')]\n",
-    "vip_sessions_directory = sessions_laser[sessions.full_genotype.str.match('Vip')]"
+    "vip_sessions_directory = sessions_laser[sessions.full_genotype.str.match('Vip')]\n",
+    "wt_sessions_directory = sessions_laser[sessions.full_genotype.str.match('wt')]\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "612271c4-57b6-4d1a-a558-a1728d1b5958",
+   "cell_type": "markdown",
+   "id": "88d407f6-dd39-4daf-81cd-c79e597ca47e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/noah/miniforge3/envs/optotag2/lib/python3.6/site-packages/ipykernel_launcher.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
    "source": [
-    "wt_sessions_directory = sessions_laser[sessions.full_genotype.str.match('wt')]\n",
-    "vip_sessions_directory.head()\n",
-    "session = cache.get_session_data(799864342)"
+    "### Choose a cell type to extract from\n",
+    "load the directory for a chosen cell type and extract data from one of the listed sessions"
    ]
   },
   {
@@ -484,34 +481,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "46dd08b7-779b-46fb-ac5f-b2dd6e01be9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#extract for one session"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 20,
    "id": "e8595137-5882-4527-a5f1-94e6b92f524f",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#extract for one session\n",
+    "\n",
     "#this can take a few mins - just add session number you want here :)\n",
     "#downloads session data from allen inst cache\n",
     "session = cache.get_session_data(839557629)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "6bcb9214-beac-44f5-9085-452e8975f6fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(session.__doc__)"
    ]
   },
   {
@@ -519,7 +498,13 @@
    "id": "2afd6bdf-aa9e-439f-87be-5098b63fce8a",
    "metadata": {},
    "source": [
-    "## Extract Spike Times for Units"
+    "## Extract Spike Times for Units\n",
+    "\n",
+    "Units are extracted for displaying an increased firing rate during optical stimulation\n",
+    "\n",
+    "This is defined as a firing rate of >=2x the units baseline firing rate during stim\n",
+    "\n",
+    "This could likely be improved, particularly for cells with very low stimulated and baseline firing rates"
    ]
   },
   {
@@ -529,18 +514,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#useful cell for understanding the structure of the session object. Run one line at a time\n",
+    "\n",
     "# ??session\n",
     "# help(session)\n",
-    "# session.units.ecephys_structure_acronym.unique()"
+    "# session.units.ecephys_structure_acronym.unique()\n",
+    "# print(session.__doc__)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4050b561-175c-4e2a-8437-1a4b89cd0aad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -574,7 +554,7 @@
     "# trials = session.optogenetic_stimulation_epochs[(session.optogenetic_stimulation_epochs.duration > 0.009) & \\\n",
     "#                                                 (session.optogenetic_stimulation_epochs.duration < 0.02)]\n",
     "trials = session.optogenetic_stimulation_epochs\n",
-    "units = session.units[session.units.ecephys_structure_acronym.str.match('VIS')]\n",
+    "units = session.units[session.units.ecephys_structure_acronym.str.match('VIS')] #only take units in the visual cortex (others are too deep for stimulation\n",
     "#units from: vis am, vis pm, vis p, vis l , vis al\n",
     "\n",
     "time_resolution = 0.0005 # 0.5 ms bins\n",
@@ -648,16 +628,6 @@
    ],
    "source": [
     "da.shape # 75 trials, time, units"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "84ef3615-dbc6-488c-b1ca-92f03325df65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# da[8][:][8]"
    ]
   },
   {
@@ -787,6 +757,8 @@
     }
    ],
    "source": [
+    "#unitd are selected with an evoked rate > ((baseline_rate +1) * 2)\n",
+    "\n",
     "cre_pos_units = da.unit_id[(evoked_rate / (baseline_rate + 1)) > 2].values\n",
     "print(len(cre_pos_units))"
    ]
@@ -833,19 +805,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "65292298-e13b-4149-861f-6b8a1ef7d523",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "3d60d82c-6770-4e36-949c-e5ebef249bf3",
    "metadata": {},
    "source": [
-    "## Extract all Sessions"
+    "## Extract all Sessions\n",
+    "\n",
+    "Repeat previous steps to extract and create a dataset for all of the celly types accross all sessions"
    ]
   },
   {
@@ -1025,7 +991,7 @@
    ],
    "source": [
     "all_cre_units['Sst'].keys()\n",
-    "#netween 9 and 50 units per session, vip had sig fewer cells"
+    "#between 9 and 50 units per session, vip had sig fewer cells"
    ]
   },
   {
@@ -1157,6 +1123,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "64925085-f844-4a15-a766-62f906d79b07",
+   "metadata": {},
+   "source": [
+    "## Save this data for later analysis\n",
+    "Saved as two dictionaries organised by tuning and mouse genotype (cell type)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "id": "1b1b8787-5ff1-403a-a72e-657037173b15",
@@ -1167,130 +1142,6 @@
     "save_path = '/home/noah/noah/allen/optotagging_ceed_dataset/'\n",
     "non_tuned_df = np.save(save_path+'non_tuned.npy', all_non_tuned_units)\n",
     "tuned_df = np.save(save_path+'tuned.npy', all_cre_units)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "id": "c126f95a-c51c-4f72-b758-d4be1e5ee6af",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#save this data for ceed analysis:\n",
-    "# save_path = '/home/noah/noah/allen/optotagging_ceed_dataset/'\n",
-    "# non_tuned_df = pd.DataFrame(all_non_tuned_units).to_csv(save_path+'non_tuned.csv')\n",
-    "# tuned_df = pd.DataFrame(all_cre_units).to_csv(save_path+'tuned.csv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "25b64202-056f-4317-be6a-2faf5adbbd66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d5ee4622-10a3-4130-8850-727df7cc0f8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "06ed3714-b053-4952-ad35-2052d242b9b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4fcd9c9e-0339-405c-9196-3b3f8881ceea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47f2123c-b1ae-43c9-a36e-d769f0e7c7ba",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0b8cc6b8-62a6-4914-bcf6-85b6d63ffa7f",
-   "metadata": {},
-   "source": [
-    "# Yizi decoding:\n",
-    "\n",
-    "## Decoding:\n",
-    "\n",
-    "decoding can halp create a brain decoding map, also bcis\n",
-    "\n",
-    "note - one session has multiple trials\n",
-    "\n",
-    "decoding can be descrete or continuous\n",
-    "\n",
-    "## decoders\n",
-    "\n",
-    "stat models that predict behaviur as outptm with neural signals as input\n",
-    "\n",
-    "    linear models:\n",
-    "    non-linear: models, NNs, or even large language models\n",
-    "tokens = classification of word, or token each neuron POYO\n",
-    "\n",
-    "\n",
-    "## new stuff - decoding without spike sorting, how to share info accross datasets\n",
-    "\n",
-    "spike sorting cannot always be performed with high enough precision:\n",
-    "    erronous spikes, poor quality metrics\n",
-    "BUT: sometime using only good quality spikes (KS) can give worse decoding performance than all KS neurons!\n",
-    "\n",
-    "    Happens accross most brain regions, good neurons 1/4 all neurons\n",
-    "\n",
-    "## existing spike free decoding methods:\n",
-    "\n",
-    "    multi-unit threshold crossing\n",
-    "\n",
-    "## new stuff:\n",
-    "    use location features as well as spikes?\n",
-    "    use gmms, mixture weights change over time?\n",
-    "\n",
-    "**minimum sufficient statistics!**\n",
-    "\n",
-    "## Decoding with shared neural and behavioural info\n",
-    "\n",
-    "why: similar brain dynamics during the same task across animals!\n",
-    "\n",
-    "reduced rank model and a multisession reduced-rank model\n",
-    "\n",
-    "    decompose W into UV\n",
-    "    W is neurons[C] x time; U is CxR, V is RxT [R is rank?]\n",
-    "    find what rank is needed to achieve good decoding (very low d)\n",
-    "\n",
-    "Identifying important neurons and time-scales for decoding (interpretability)\n",
-    "\n",
-    "    behaviourally relevant neural info is low dimentional\n",
-    "    Can be used to find latent trajectories\n",
-    "    U valye can be used to find importance of a neuron!\n",
-    "    mutual information betwenn neural actovoty and wheel speed...\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b62393fc-a85f-4020-8f51-9888f525f92c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#could try to use decoding as a metric for spike sorting\n",
-    "#could use low rank models to find neurons that predict some behavour"
    ]
   }
  ],
