--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2460,7 +2460,9 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "name": "conda-env-optotag-py"
+   "display_name": "Python [conda env:optotag2]",
+   "language": "python",
+   "name": "conda-env-optotag2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2472,7 +2474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.6.15"
   },
   "papermill": {
    "default_parameters": {},
